--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.2")
 }
-
+dependencies {
+    implementation 'com.google.code.gson:gson:2.8.7'
+}
 test {
     useJUnitPlatform()
 }
