--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
+tasks.test {
+    useJUnitPlatform()
+}
 jacocoTestReport {
     reports {
         xml.enabled true
